HTML/CSS changes: mobile view, menu, page border
Mobile (responsive) view: page is now fully visible without scrolling
horizontally (not taking content elements into consideration which are
too wide).

Menu: on devices less than 800px wide, the menu collapses into a
"hamburger" menu. Therefore, small changes in the sidebar markup are
necessary.

page border: has been changed from the outdated "rounded corners"
look and shadow to a more "flat" design.

--- a/local.css
+++ b/local.css
@@ -8,7 +8,7 @@
   }
 
   body {
-    padding: 20px 5px 30px 20px;
+    padding: 10px 0;
     margin: 0;
     background: rgb(221, 221, 221);
     height: 100%;
@@ -44,16 +44,17 @@
   .page {
     max-width: 816px;
     background: white;
-    padding: 7px;
-    border: 1px solid rgb(200, 200, 200);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    /* padding: 7px; */
+    /* border: 1px solid rgb(200, 200, 200); */
+    /* border-radius: 10px; */
+    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
     margin: 0 auto;
   }
 
   #pagebody {
     float: left;
-    max-width: 600px;
+    max-width: 584px;
+    padding: 10px;
   }
 
   /* sponsoring page */
@@ -134,7 +135,7 @@
   .sidebar {
     min-width: 200px;
     float: left;
-    margin:0 16px 0 0;
+    /* margin:0 16px 0 0; */
     border: 0;
   }
 
@@ -181,6 +182,7 @@
   .pagedate {
     margin-top: 0.6em;
     font-size: 0.8em;
+    padding: 0 5px 5px;
   }
   #pageinfo {
     margin-bottom: 0.4em;
@@ -253,6 +255,10 @@
   #map2 a, #map2 a:hover, #map2 a:visited {
     color: blue;
   }
+
+  input[type="checkbox"]#menu-toggle {
+    display: none;
+  }
 }
 
 /* print layout */
@@ -273,15 +279,20 @@
 
 /* this defines the different layouts on smaller screen widths */
 @media only screen and (max-width: 800px) {
+  body {
+    padding: 5px;
+  }
+
   .sidebar {
     float: none;
     text-align: center;
     width: inherit;
+    order: 0;
   }
   .sidebar li {
-    float: left;
-    min-width: 200px;
-    max-width: 300px;
+    /*float: left;*/
+    /*min-width: 200px;*/
+    /*max-width: 300px;*/
     overflow: visible;
   }
   .sidebar li span.selflink, .sidebar li a {
@@ -290,6 +301,8 @@
 
   #sponsors_nav {
     clear: left;
+    background-color: white;
+    padding-top: 5px;
   }
 
   #pagebody {
@@ -304,4 +317,92 @@
   #mainimages img {
     display: inline;
   }
+
+  /* hamburger menu */ 
+
+  .menu-container {
+    background-color: #eee;
+  }
+
+  label[for="menu-toggle"] {
+    position: relative;
+    display: block;
+    width: 3rem;
+    height: 1.7rem;
+    border: 8px solid transparent;
+    /* border-top-width: 15px; */
+    /* background: #fff; */
+    margin: auto;
+  }
+  label[for="menu-toggle"]:hover {
+    cursor: pointer;
+  }
+  label[for="menu-toggle"] span {
+    position: absolute;
+    height: 4px;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: #000;
+    transition: all 150ms;
+    border-radius: 2px;
+  }
+  label[for="menu-toggle"] span:nth-of-type(2) {
+    top: 50%;
+    margin-top: -2px;
+  }
+  label[for="menu-toggle"] span:last-of-type {
+    bottom: 0;
+    top: auto;
+  }
+
+  .menu {
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 200ms, opacity 200ms;
+  }
+
+
+  input[type="checkbox"]#menu-toggle:checked ~ label span:first-of-type,
+  input[type="checkbox"]#menu-toggle:checked ~ label span:last-of-type {
+    width: 2rem;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    margin-top: -2px;
+    margin-left: -1rem;
+  }
+  input[type="checkbox"]#menu-toggle:checked ~ label span:first-of-type {
+    transform: rotate(45deg);
+  }
+  input[type="checkbox"]#menu-toggle:checked ~ label span:nth-of-type(2) {
+    opacity: 0;
+    left: 50%;
+    width: 0;
+    right: 50%;
+  }
+  input[type="checkbox"]#menu-toggle:checked ~ label span:last-of-type {
+    transform: rotate(-45deg);
+  }
+
+  input[type="checkbox"]:checked ~ .menu {
+    max-height: 1000px;
+    opacity: 1;
+    transition: max-height 150ms, opacity 150ms;
+  }
+
+
+
 }
+
+#content h1:first-of-type {
+  margin-top: 0;
+}
+
+#footer #pageinfo {
+  border-top: 1px solid #c1c1c1;
+  color: #c1c1c1;
+}
+
+
