--- a/glt_ikiwiki_templates/page.tmpl
+++ b/glt_ikiwiki_templates/page.tmpl
@@ -11,7 +11,7 @@
 </TMPL_IF>
 </TMPL_IF>
 <TMPL_IF HTML5>
-<meta name="viewport" content="width=700, initial-scale=1.0" />
+<meta name="viewport" content="content="width=device-width, initial-scale=1.0" />
 <meta charset="utf-8" /><TMPL_ELSE><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </TMPL_IF>
 <title><TMPL_VAR TITLE></title>
@@ -53,7 +53,7 @@
 <span>
 <span class="parentlinks">
 <TMPL_LOOP PARENTLINKS>
-<a href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a>/ 
+<a href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a>/
 </TMPL_LOOP>
 </span>
 <span class="title">
